--- a/style.css
+++ b/style.css
@@ -45,5 +45,5 @@ body {
 
 .primary-nav__link:hover {
     color: white;
-    text-shadow: 20px 20px #1D3557;
+    text-shadow: 20px 20px #E6E6FA;
 }
